<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/slot_6"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/boardView"
        android:layout_width="408dp"
        android:layout_height="597dp"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="23dp"
        android:contentDescription="@string/board_name"
        app:layout_constraintBottom_toTopOf="@+id/restartButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/board" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="105dp"
        android:contentDescription="@string/slot_0"
        android:onClick="dropIn"
        android:tag="0"
        app:layout_constraintStart_toStartOf="@id/boardView"
        app:layout_constraintTop_toTopOf="@+id/boardView" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="105dp"
        android:contentDescription="@string/slot_1"
        android:onClick="dropIn"
        android:tag="1"
        app:layout_constraintStart_toStartOf="@id/boardView"
        app:layout_constraintTop_toTopOf="@+id/boardView" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginStart="271dp"
        android:layout_marginTop="105dp"
        android:contentDescription="@string/slot_2"
        android:onClick="dropIn"
        android:tag="2"
        app:layout_constraintStart_toStartOf="@id/boardView"
        app:layout_constraintTop_toTopOf="@+id/boardView" />


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="236dp"
        android:contentDescription="@string/slot_3"
        android:onClick="dropIn"
        android:tag="3"
        app:layout_constraintStart_toStartOf="@id/boardView"
        app:layout_constraintTop_toTopOf="@+id/boardView" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="236dp"
        android:contentDescription="@string/slot_4"
        android:onClick="dropIn"
        android:tag="4"
        app:layout_constraintStart_toStartOf="@id/boardView"
        app:layout_constraintTop_toTopOf="@+id/boardView" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginStart="271dp"
        android:layout_marginTop="236dp"
        android:contentDescription="@string/slot_5"
        android:onClick="dropIn"
        android:tag="5"
        app:layout_constraintStart_toStartOf="@id/boardView"
        app:layout_constraintTop_toTopOf="@+id/boardView" />


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="367dp"
        android:contentDescription="@string/slot_6"
        android:onClick="dropIn"
        android:tag="6"
        app:layout_constraintStart_toStartOf="@id/boardView"
        app:layout_constraintTop_toTopOf="@+id/boardView" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="367dp"
        android:contentDescription="@string/slot_7"
        android:onClick="dropIn"
        android:tag="7"
        app:layout_constraintStart_toStartOf="@id/boardView"
        app:layout_constraintTop_toTopOf="@+id/boardView" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginStart="271dp"
        android:layout_marginTop="367dp"
        android:contentDescription="@string/slot_8"
        android:onClick="dropIn"
        android:tag="8"
        app:layout_constraintStart_toStartOf="@id/boardView"
        app:layout_constraintTop_toTopOf="@+id/boardView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="45dp"
        android:textAlignment="center"
        android:textColor="@color/cardview_dark_background"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/restartButton"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="30dp"
        android:alpha="0"
        android:contentDescription="@string/restart_button"
        android:onClick="restart"
        android:text="@string/restart_button"
        android:textSize="24sp"
        android:visibility="visible"
        app:backgroundTint="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>